# python-registries

./: .gitignore  .readthedocs.yml  .reviewboardrc  LICENSE  README.md  doc-requirements.txt  pyproject.toml  tox.ini
docs/: conf.py  index.rst
docs/coderef/: index.rst
docs/guides/: index.rst  item-lookups.rst  item-registration.rst  writing-registries.rst
docs/releasenotes/: 1.0.rst  index.rst
registries/: __init__.py  _version.py  errors.py  items.py  registry.py
registries/tests/: test_entry_point_registry.py  test_ordered_registry.py  test_registry.py
